fix hslide gap

--- a/src/scss/components/_content-slideshow.scss
+++ b/src/scss/components/_content-slideshow.scss
@@ -70,7 +70,7 @@
   align-items: flex-end;
   justify-content: center;
   gap: 60px;
-  padding: 190px map.get($spacing, '3xl') 0;
+  padding: 240px map.get($spacing, '3xl') 0;
   max-width: 1400px;
   margin: 0 auto;
   box-sizing: border-box;
